frontend/src/app/mission/page.module.css
@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto+Slab:wght@100..900&display=swap");

.description {
  text-align: left;
  font-family: "Open Sans";
  font-size: 24px;
  font-style: normal;
  font-weight: 400;
  line-height: 32px; /* 133.333% */
  width: 52%;
}

.titlelarge {
  font-family: "Roboto Slab";
  font-size: 32px;
  font-weight: 700;
  line-height: 48px;
  letter-spacing: 0.02em;
  text-align: left;
}

.text {
  font-weight: 16px;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: flex-start;
  gap: 47px;
  margin-left: 99px;
  margin-right: 99px;
  margin-top: 108px;
  margin-bottom: 89px;
}

/*For the images*/
.imageContainer {
  width: 37%;
  position: relative;
  bottom: 500px;
  left: 800px;
  margin-bottom: -300px;

  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-between;
  align-items: flex-end;
  row-gap: 32px;
}

/*For the Value Cards*/
.customRectangle {
  width: 401px;
  height: 434px;
  border-radius: 10px;
  background-color: #694c97;
  position: relative;
}

.rectangleContainer {
  width: 100%; /*make the size of the container respective to the page*/
  display: flex;
  justify-content: space-around;
  flex-wrap: wrap;
  row-gap: 22px;
}

.circleWhite {
  width: 146.35px;
  height: 147px;
  background-color: white;
  border-radius: 50%;
  position: relative;
  transform: translate(25%, 25%);
  overflow: hidden;
}

.centeredImage {
  position: relative;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  max-width: 100%;
  max-height: 100%;
}

.RectangleTitle {
  font-family: "Roboto Slab", sans-serif;
  font-size: 32px;
  font-weight: 480;
  line-height: 48px;
  letter-spacing: 3%;
  transform: translate(10%, 150%);
  color: white;
}

.BodytextInsideRectangle {
  text-align: left;
  font-family: "Open Sans";
  font-size: 16px;
  font-style: normal;
  font-weight: 400;
  line-height: 24px; /* 133.333% */
  width: 85%;
  transform: translate(12%, 78%);
  color: white;
}

